<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@+id/sub_main"/>

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:src="@drawable/outline_location_on_24"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/txt_title"
        android:layout_alignStart="@id/txt_title"
        app:tint="@color/orange" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/black"
        android:layout_alignTop="@id/icon_location"
        android:textSize="15sp"
        android:layout_toEndOf="@id/icon_location"
        android:layout_marginStart="10sp"/>

    <RelativeLayout
        android:id="@+id/sub_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_location"
        android:layout_marginTop="35sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_border">

        <TextView
            android:id="@+id/title_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:layout_centerHorizontal="true"
            android:text="@string/titleInfo_desc"
            android:textSize="13sp"
            android:textColor="@color/gray" />

        <RelativeLayout
            android:id="@+id/first_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30sp"
            android:layout_below="@+id/title_info"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/lastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/lastUpdated_desc"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/lastUpdated_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/lastUpdatedTime_desc"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:layout_toEndOf="@id/lastUpdated"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30sp"
            android:paddingBottom="8dp"
            android:layout_below="@+id/first_layout"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/nextUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/nextUpdate_desc"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/nextUpdate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/nextUpdateTime_desc"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/nextUpdate"/>
        </RelativeLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_main"
        android:layout_alignStart="@+id/sub_main"
        android:layout_marginTop="60sp"
        android:elevation="10sp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:src="@drawable/baseline_manage_search_24"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/katalog_tender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/tender_catalog"
                android:textColor="@color/black"
                android:paddingBottom="10sp"
                android:padding="10sp"
                android:layout_marginBottom="10sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_main"
        android:layout_alignEnd="@+id/sub_main"
        android:layout_alignTop="@+id/card1"
        android:elevation="10sp"
        app:cardCornerRadius="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bookmark_icon"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:src="@drawable/baseline_bookmark_added_24"
                app:tint="@color/orange"
                />

            <TextView
                android:id="@+id/tender_tersimpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bookmark_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/saved_tender"
                android:textColor="@color/black"
                android:paddingBottom="10sp"
                android:padding="10sp"
                android:layout_marginBottom="10sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card2"
        android:layout_alignStart="@+id/card1"
        android:layout_marginTop="30sp"
        android:elevation="10sp"
        app:cardCornerRadius="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/statistic_icon"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:src="@drawable/baseline_insert_chart_24"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/laporan_statistik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/statistic_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/statistic_report"
                android:textColor="@color/black"
                android:paddingBottom="10sp"
                android:padding="10sp"
                android:layout_marginBottom="10sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card2"
        android:layout_alignEnd="@+id/card2"
        android:layout_alignTop="@+id/card3"
        android:elevation="10sp"
        app:cardCornerRadius="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp"
                android:src="@drawable/baseline_settings_24"
                app:tint="@color/orange" />

            <TextView
                android:id="@+id/pengaturan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_icon"
                android:layout_centerHorizontal="true"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:paddingBottom="10sp"
                android:padding="10sp"
                android:layout_marginBottom="10sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
